samples/_failures_safe/1761473225_4602b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e005af0c.c: In function ‘main’:
./samples/SAFE/__tmp_e005af0c.c:154:28: error: missing terminating " character
  154 |                     printf("Cannot add matrices: dimension mismatch or integer overflow
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e005af0c.c:154:21: error: expected expression at end of input
  154 |                     printf("Cannot add matrices: dimension mismatch or integer overflow
      |                     ^~~~~~
./samples/SAFE/__tmp_e005af0c.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e005af0c.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e005af0c.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e005af0c.c:154:21: error: expected declaration or statement at end of input
